--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "voice-to-text",
   "version": "1.0.0",
   "description": "Voice to Text AI Application",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'Build completed for Vercel'",
+    "vercel-build": "echo 'Vercel build completed'"
   },
   "dependencies": {
     "express": "^4.18.2",
