--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "backend:linux": "bash start-backend.sh",
+    "backend:windows": "start-backend.bat",
+    "prepare:github": "cp -r public/* gh-pages/"
   },
   "dependencies": {
     "express": "^4.18.2",
